--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ section {
 }
 
 .inicio-fundo {
-    background-image: url('img/4965007.jpg');
+    background-image: url(4965007.jpg);
     background-size: cover;
     background-position: right;
     border-radius: 80px;
@@ -71,8 +71,8 @@ section {
     padding-top: 5rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    background: url('img/flor.png') top right no-repeat,
-        url('img/flor-esquerda.png') bottom left no-repeat;
+    background: url(flor.png) top right no-repeat,
+        url(flor-bottom-direita.png) bottom left no-repeat;
     background-size: 180px 180px;
 }
 
@@ -98,12 +98,12 @@ h2 {
 }
 
 .fundo-galeria {
-    background: url('img/flor-bottom-direita.png') bottom right no-repeat;
+    background: url(flor-esquerda.png) bottom right no-repeat;
     background-size: 180px 180px;
 }
 
 #contato {
-    background-image: url('img/4965007.jpg');
+    background-image: url(4965007.jpg);
     background-size: cover;
     padding: 4rem 0;
 }
