--- a/style.css
+++ b/style.css
@@ -125,3 +125,9 @@ h2 {
 .form-control {
     background-color: #F1EDEF;
 }
+.menu-acessibilidade{
+    position: fixed;
+    top:2rem;
+    right:20px;
+    z-index: 1000;
+}
