--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
     --laranja-claro: #FF862A;
-}
+ }
 
 body {
     font-size: 1rem;
@@ -24,7 +26,9 @@ section {
 }
 
 .inicio-fundo {
-    background-image: url(4965007.jpg);
+    /* aula 3 */
+    background-image: url('img/4965007.jpg');
+    /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
     border-radius: 80px;
@@ -34,6 +38,7 @@ section {
     margin: 0 auto;
 }
 
+/* posicionamento para a imagem à direita */
 .img-inicio {
     position: absolute;
     right: 0;
@@ -56,7 +61,7 @@ section {
     border-radius: 30px;
     border: none;
     width: 14em;
-    height: 3m;
+    height: 3em;
     align-content: center;
 
 }
@@ -71,9 +76,10 @@ section {
     padding-top: 5rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    background: url(flor.png) top right no-repeat,
-        url(flor-bottom-direita.png) bottom left no-repeat;
+    background: url('img/flor.png') top right no-repeat,
+        url('img/flor-esquerda.png') bottom left no-repeat;
     background-size: 180px 180px;
+    /* Ajuste o tamanho conforme necessário */
 }
 
 #tropicalia .container {
@@ -82,6 +88,7 @@ section {
     justify-content: center;
     position: relative;
     z-index: 1;
+    /* Garante que o conteúdo fica acima das imagens do background */
 }
 
 
@@ -98,21 +105,26 @@ h2 {
 }
 
 .fundo-galeria {
-    background: url(flor-esquerda.png) bottom right no-repeat;
+    background: url('img/flor-bottom-direita.png') bottom right no-repeat;
     background-size: 180px 180px;
 }
 
 #contato {
-    background-image: url(4965007.jpg);
+    background-image: url('img/4965007.jpg');
     background-size: cover;
     padding: 4rem 0;
+    /* Espaçamento interno para a seção de contato */
+
 }
 
 .formulario {
     background-color: #ffffff;
     padding: 2rem;
+    /* Espaçamento interno dentro do formulário */
     border-radius: 10px;
+    /* Borda arredondada para o formulário */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* Sombra suave para destacar o formulário */
     font-weight: bold;
 }
 
@@ -131,7 +143,6 @@ h2 {
     right:20px;
     z-index: 1000;
 }
-
 .rotacao-botao{
     transform: rotate(-90deg);
     transform-origin: right center;
@@ -145,4 +156,7 @@ h2 {
 
 .opcoes-acessibilidade button{
     margin-bottom: 5px;
+}
+.apresenta-lista{
+    display: none;
 }
