--- a/style.css
+++ b/style.css
@@ -183,3 +183,9 @@ h2 {
 .alto-contraste .fundo-galeria {
     background: none;
 }
+:root {
+    --laranja-claro: #FF862A;
+    --alto-contraste-fundo: #000000;
+    --alto-contraste-texto: #ffffff;
+    --alto-contraste-link: #ffd700;
+}
