--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ section {
 }
 
 .inicio-fundo {
-    background-image: url('img/4965007.jpg');
+    background-image: url('4965007.jpg');
     background-size: cover;
     background-position: right;
     border-radius: 80px;
